[tool.poetry]
name = "omni-python-test"
version = "0.1.0"
description = ""
authors = ["bradford roarr <49485134+broarr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.41.0"
grpcio-tools = "^1.41.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
